(executable
  (name test)
  (libraries wikitext oUnit)
  (modules test)
)

(executable
  (name wikitext_js)
  (js_of_ocaml (flags +toplevel.js +dynlink.js))
  (preprocess (pps js_of_ocaml-ppx))
  (libraries wikitext js_of_ocaml js_of_ocaml-ppx)
  (modules wikitext_js)
)

(alias
  (name runtest)
  (action  (run ./test.exe) )
)
